[#IOPID-273] Add `generateNonce` endpoint (#1070)
* [#IOPID-273] add generateNonce endpoint

* [#IOPID-273] add tests

* [#IOPID-273] link online specs

* [#IOPID-273] update path

* [#IOPID-273] update fast-login openapi link

* [#IOPID-273] update fast-login commit id
