# openapi/api_fast_login.template.yaml
@@ -90,6 +90,6 @@ components:
     ProblemJson:
       $ref: "https://raw.githubusercontent.com/pagopa/io-functions-commons/v28.6.0/openapi/definitions.yaml#/ProblemJson"
     Nonce:
-      $ref: "https://raw.githubusercontent.com/pagopa/io-functions-fast-login/1b47d311847b7f63dbfd97886122f4b2e94b79b4/api/internal.yaml#/components/schemas/Nonce"
+      $ref: "https://raw.githubusercontent.com/pagopa/io-functions-fast-login/44dc893c05a08ea3c34c0fa3a37e9667914ffb5d/api/internal.yaml#/components/schemas/Nonce"
     GenerateNonceResponse:
-      $ref: "https://raw.githubusercontent.com/pagopa/io-functions-fast-login/1b47d311847b7f63dbfd97886122f4b2e94b79b4/api/internal.yaml#/components/schemas/GenerateNonceResponse"
+      $ref: "https://raw.githubusercontent.com/pagopa/io-functions-fast-login/44dc893c05a08ea3c34c0fa3a37e9667914ffb5d/api/internal.yaml#/components/schemas/GenerateNonceResponse"
